--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Tea Cozy</title>
+    <link href="resources/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <!--Header-->
+    <header>
+      <img id="logo" src="resources/images/logo.png" />
+      <nav>
+        <a href="#mission">Mission</a>
+        <a href="#featured">Featured Tea</a>
+        <a href="#locations">Locations</a>
+      </nav>
+    </header>
+
 
   </body>
 </html>
