--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       </nav>
     </header>
 
-
+    <div id="mission" class="container">
+      <div id="missionbox">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
+    </div>
   </body>
 </html>
